# enclave-python

./: LICENSE  README.md  fill_summarize.py  pyproject.toml  readme.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: publish.yml  testing.yml
enclave/: __init__.py  _baseclient.py  _cross.py  _perps.py  _spot.py  client.py  models.py  wsclient.py
examples/: common.ipynb  common.py  intro.py  ws.py  wscommon.ipynb  wsintro.py
tests/: test_enclave.py
trading/: bot.py  calculate_pnl.py
