[tool.poetry]
name = "enclave"
version = "0.3.2"
description = "Connect to Enclave Markets API"
authors = ["benclave <ben@enclave.market>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"
websockets = "^12.0"

[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
