[tool.poetry]
name = "enclave"
version = "0.3.3"
description = "Connect to Enclave Markets API"
authors = ["benclave <ben@enclave.market>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.32.5"
websockets = "^15.0.1"
python-dotenv = "^1.1.1"
urllib3 = "^2.5.0"

[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
